optimized docker build of non native image