@@ -1,26 +1,38 @@
-# Using Oracle GraalVM for JDK 17
-FROM openjdk:20 AS builder
+# Custom jre build
+FROM maven:3-amazoncorretto-21 AS build
 
-# Set the working directory to /home/app
-WORKDIR /build
+COPY . /opt/app/
+WORKDIR /opt/app/
 
-# Copy the source code into the image for building
-COPY . /build
+RUN mvn package -DskipTests
 
-# Build
-RUN ./mvnw --no-transfer-progress -e package
+# Extract the application dependencies
+RUN jar xf target/demo-0.0.1-SNAPSHOT.jar
 
-# Fetch base image for OpenJDK 20
-FROM openjdk:20
+# Analyze the dependencies contained into the fat jar
+RUN jdeps --ignore-missing-deps -q  \
+    --recursive  \
+    --multi-release 17  \
+    --print-module-deps  \
+    --class-path 'BOOT-INF/lib/*'  \
+    target/demo-0.0.1-SNAPSHOT.jar > deps.info
 
-# Define working directory in the container
-WORKDIR /app
+# Create the custom JRE
+RUN jlink \
+    --verbose \
+    --add-modules $(cat deps.info) \
+    --compress 2 \
+    --no-header-files \
+    --no-man-pages \
+    --output /custom_jre
 
-# Copy the native executable into the containers
-COPY --from=builder /build/target/*.jar app.jar
+# Use the custom jre as a base image
+FROM debian:buster-slim
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=build /custom_jre $JAVA_HOME
 
-# Expose the port your app runs on
+COPY --from=build /opt/app/target/demo-0.0.1-SNAPSHOT.jar /app.jar
+
 EXPOSE 8080
-
-# Define the entry point of the container
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "/app.jar", "api"]
